fix: Increase spacing between header links
These were tight, and hard to use on touch devices

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -30,15 +30,11 @@
 
 .navLink {
   display: inline;
-  margin-right: var(--space-sm);
-}
-
-.navLink:last-child {
-  margin-right: 0;
 }
 
 .navList {
-  display: inline-block;
+  display: inline-flex;
+  gap: var(--space-md);
   list-style: none;
   margin: 0 var(--space-lg) 0 0;
   padding: var(--space-sm) 0;
@@ -51,6 +47,7 @@
 .wrapper {
   align-items: center;
   display: flex;
+  gap: var(--space-md) var(--space-lg);
   flex-wrap: wrap;
   justify-content: space-between;
 }
